--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <!-- start header -->
     <div class="header" id="header">
         <div class="container">
-            <a href="#" class="logo">Elzero</a>
+            <a href="#" class="logo">Animora</a>
             <ul class="main-nav">
                 <li><a href="#articles">Artical</a></li>
                 <li><a href="#gallery">Gallery</a></li>
                 <li><a href="#features">Features</a></li>
                 <li>
                     <a href="#">Other links</a>
-                    <!-- start megamenu -->
+                    <!-- start mega menu -->
                     <div class="mega-menu">
                         <div class="image">
                             <img src="image/360_F_349032801_W4cXKHqBC28NeFtvqPRwPyab4JSU3GVQ.jpg" alt="">
@@ -56,7 +56,7 @@
     <div class="landing">
         <div class="container">
             <div class="text">
-                <h1>Welcome,To Elzero World</h1>
+                <h1>Welcome,To Animora World</h1>
                 <p>Lorem illamipsa temporibus. Consequatur blanditiis qui sequi 
                     explicabo dolorem.</p>
             </div>
@@ -775,7 +775,7 @@
     <div class="footer">
         <div class="containerz">
             <div class="box">
-                <h3>elzero</h3>
+                <h3>Animora</h3>
                 <ul class="social">
                     <li>
                         <a href="#" class="facebook">
@@ -834,7 +834,7 @@
                 <img src="image/pexels-bruno-scramgnon-5007442.jpg" alt="">
             </div>
         </div>
-        <p class="copyright">made with &lt;3 by elzeero</p>
+        <p class="copyright">made with <i class="fas fa-heart"></i> by Khaled</p>
     </div>
     <!-- end foot -->
 </body>
